--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         cuda: '11.7.0'
   
-    - run: echo "Installed cuda version is: ${{steps.cuda-toolkit.outputs.cuda}}"
-    - run: echo "Cuda install location: ${{steps.cuda-toolkit.outputs.CUDA_PATH}}"
+    - run: echo "Installed cuda version is： ${{steps.cuda-toolkit.outputs.cuda}}"
+    - run: echo "Cuda install location： ${{steps.cuda-toolkit.outputs.CUDA_PATH}}"
     - run: nvcc -V
     
     
